# linalg-solver

./: .cursorrules  .gitignore  README.md  fmt.py  linalg.py  log.py  main.py  permutation.py  polynomial.py  pyproject.toml  random_matrix.py  res.tex
.cursor/rules/: documentation.mdc  latex_output.mdc  math_operations.mdc  python.mdc  python_structure.mdc  rust.mdc  rust_integration.mdc
linalg-helper/: BUILDME.md  Cargo.toml
linalg-helper/src/: adjacency.rs  bitlist.rs  canonical.rs  determinant.rs  dm.rs  hopcroft_karp.rs  lib.rs  nonzeros.rs  permutation.rs  tarjan.rs  tests.rs
linalg_solver/: __init__.py  determinant.py  fmt.py  linalg.py  log.py  permutation.py  polynomial.py  random_matrix.py
