[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "linalg-solver"
version = "0.1.0"
description = "A tool for solving linear algebra problems, with a focus on visualizing the process"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sympy>=1.12.1",
]

[project.scripts]
linalg-solver = "main:main"

[tool.maturin]
manifest-path = "linalg-helper/Cargo.toml"
python-source = "."
features = ["pyo3/extension-module"]
